--- a/pages/index.css
+++ b/pages/index.css
@@ -1,1 +1,6 @@
+@import url(../vendor/normalize.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/page__container/page__container.css);
 @import url(../blocks/header/header__logo/header__logo.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/page__container/page__container.css);
