--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,16 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
 @import url(../blocks/page/page__container/page__container.css);
-@import url(../blocks/header/header__logo/header__logo.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/page/page.css);
-@import url(../blocks/page/page__container/page__container.css);
+@import url(../blocks/page/__container/page__container.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/__lang-link_selected/header__lang-link_selected.css);
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
