--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,13 @@
 .header__lang-link {
-    color: inherit;
-    text-decoration: none;
-    font-size: 24px;
-    line-height: 28px;
+  color: inherit;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 28px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
