--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,8 @@
 .header__logo {
-    width: 176px;
+  width: 176px;
+}
+@media screen and (max-width: 320px) {
+  .header__logo {
+    width: 142px;
+  }
 }
