--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,29 @@
 .header {
-    display: flex;
-    align-items: center;
-    padding-top: 28px;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  padding-top: 28px;
+  justify-content: space-between;
+}
+@media screen and (max-width: 1280px) {
+  .header {
+    max-width: 1184px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    max-width: 720px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .header {
+    max-width: 288px;
+    padding-top: 16px;
+  }
 }
