--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,29 +1,29 @@
-.page {
-    max-width: 1184px;
-    background-color: #2a2c2f;
-    color: #fff;
-    padding: 0;
+.intro {
     margin: 0 auto;
+    margin-top: 92px;
+    max-width: 984px;
+    
+    
 }
 @media screen and (max-width: 1280px) {
-    .page {
-      max-width: 1184px;
+    .lead {
+      max-width: 984px;
     }
   }
   
   @media screen and (max-width: 1024px) {
-    .page {
+    .lead {
       max-width: 928px;
     }
   }
-  
   @media screen and (max-width: 768px) {
-    .page {
-      max-width: 720px;
-    }
+      .lead {
+        margin-top: 88px;
+        max-width: 720px;
+      }
   }
   @media screen and (max-width: 320px) {
-   .page {
-       max-width: 288px;
-   }   
+      .lead {
+        max-width: 288px;
+      }
   }
