--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,26 @@
     margin: 64px auto 0;
     display: inline-block;
 }
+@media screen and (max-width: 1280px) {
+    .lead__image {
+        max-width: 984px;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .lead__image {
+        width: 100%;
+        margin-top: 56px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .lead__image {
+        width: 100%;
+        margin-top: 56px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .lead__image {
+        width: 100%;
+        margin-top: 40px;
+    }
+}
