--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,16 @@
 .lead__subtitle {
-    max-width: 640px;
-    text-align: center;
-    margin: 32px auto 0;
-    font-size: 30px;
-    line-height: 36px;
+  max-width: 640px;
+  text-align: center;
+  margin: 32px auto 0;
+  font-size: 30px;
+  line-height: 36px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin-top: 16px auto 0;
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
