--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,17 @@
 .lead__title {
-    max-width: 720px;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
-    margin: 0 auto;
-    font-weight: 900;
+  max-width: 720px;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: 900;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 690px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+  }
 }
