--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,4 +1,27 @@
 .lead {
-    margin: 0 auto;
-    margin-top: 56px;  
+  margin: 0 auto;
+  margin-top: 56px;
+  max-width: 984px;
+}
+@media screen and (max-width: 1280px) {
+  .lead {
+    max-width: 984px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    margin-top: 48px;
+    max-width: 928px;
+  }
+}
+@media screen and (max-width: 768px) {
+    .lead {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 320px) {
+    .lead {
+        width: 100%;
+    }
 }
