Corrections after review

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,3 +7,16 @@
     text-transform: uppercase;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
+@media screen and (max-width: 768px) {
+    .lead__caption {
+      max-width: 720px;
+      margin: 0 auto;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .lead__caption {
+      max-width: 288px;
+      margin: 0 auto;
+    }
+  }
