--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -4,7 +4,7 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  background-image: url('../../../images/cover-trains.jpg');
+  background-image: url("../../../images/cover-trains.jpg");
   background-size: cover;
   min-height: 700px;
   justify-content: center;
@@ -12,10 +12,10 @@
 }
 
 .cover__item::before {
-  content: '';
-  background-color: #2A2C2F;
+  content: "";
+  background-color: #2a2c2f;
   opacity: 0.3;
-  transition: .3s opacity;
+  transition: 0.3s opacity;
   position: absolute;
   top: 0;
   right: 0;
