--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 765px) {
   .footer__links {
-    margin-top: 64px;
+    margin-top: 0;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
