--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,7 +23,8 @@
 
 @media screen and (max-width: 765px) {
   .footer {
-    width: 100%;
+    max-width: 288px;
     flex-wrap: wrap;
+    margin-top: 64px;
   }
 }
