--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,23 +7,27 @@
 @media screen and (max-width: 1280px) {
   .header {
     max-width: 1184px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .header {
     max-width: 928px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header {
     max-width: 720px;
+    margin: 0 auto;
   }
 }
 @media screen and (max-width: 320px) {
   .header {
     max-width: 288px;
     padding-top: 16px;
+    margin: 0 auto;
   }
 }
