--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,29 +1,27 @@
 .intro {
-    margin: 0 auto;
-    margin-top: 92px;
-    max-width: 984px;
-    
-    
+  margin: 0 auto;
+  margin-top: 92px;
+  max-width: 984px;
 }
 @media screen and (max-width: 1280px) {
-    .lead {
-      max-width: 984px;
-    }
+  .intro {
+    max-width: 984px;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .lead {
-      max-width: 928px;
-    }
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 928px;
   }
-  @media screen and (max-width: 768px) {
-      .lead {
-        margin-top: 88px;
-        max-width: 720px;
-      }
+}
+@media screen and (max-width: 768px) {
+  .intro {
+    margin-top: 88px;
+    max-width: 720px;
   }
-  @media screen and (max-width: 320px) {
-      .lead {
-        max-width: 288px;
-      }
+}
+@media screen and (max-width: 320px) {
+  .intro {
+    max-width: 288px;
   }
+}
