--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -18,10 +18,12 @@
 @media screen and (max-width: 768px) {
     .lead {
         width: 100%;
+        margin-top: 48px;
     }
 }
 @media screen and (max-width: 320px) {
     .lead {
         width: 100%;
+        margin-top: 48px;
     }
 }
