--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,29 +1,22 @@
 .page {
-    max-width: 1184px;
-    background-color: #2a2c2f;
-    color: #fff;
-    padding: 0;
-    margin: 0 auto;
+  max-width: 1184px;
+  background-color: #2a2c2f;
+  color: #fff;
+  padding: 0;
+  margin: 0 auto;
 }
 @media screen and (max-width: 1280px) {
-    .page {
-      max-width: 1184px;
-    }
+  .page {
+    max-width: 1184px;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .page {
-      max-width: 928px;
-    }
+}
+@media screen and (max-width: 768px) {
+  .page {
+    max-width: 100%;
   }
-  
-  @media screen and (max-width: 768px) {
-    .page {
-      max-width: 720px;
-    }
+}
+@media screen and (max-width: 320px) {
+  .page {
+    max-width: 100%;
   }
-  @media screen and (max-width: 320px) {
-   .page {
-       max-width: 288px;
-   }   
-  }
+}
