--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,7 +5,6 @@
   grid-template-columns: repeat(4, 284px);
   grid-template-rows: repeat(3, 213px);
   gap: 16px;
-
 }
 
 @media screen and (max-width: 1270px) {
@@ -14,6 +13,7 @@
     grid-template-columns: repeat(3, 300px);
     grid-template-rows: repeat(4, 225px);
     gap: 14px;
+    margin-left: 48px;
   }
 }
 
@@ -27,11 +27,11 @@
   }
 }
 @media screen and (max-width: 760px) {
-    .photo-grid {
-      margin: 64px auto 0 auto;
-      grid-template-columns: 288px;
-      grid-template-rows: repeat(12, 216px);
-      row-gap: 12px;
-      max-width: 288px;
-    }
+  .photo-grid {
+    margin: 64px auto 0 auto;
+    grid-template-columns: 288px;
+    grid-template-rows: repeat(12, 216px);
+    row-gap: 12px;
+    max-width: 288px;
   }
+}
