--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,5 @@
 .place__link {
+  display: block;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: normal;
   font-size: 18px;
