--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -19,10 +19,11 @@
     line-height: 46px;
   }
 }
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 430px) {
   .place__title {
     max-width: 288px;
     font-size: 32px;
     line-height: 35px;
+    padding-left: 16px;
   }
 }
