--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,11 +3,12 @@
   align-items: center;
   padding-top: 28px;
   justify-content: space-between;
+  max-width: 1184px;
+  margin: 0 auto;
 }
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   .header {
-    max-width: 1184px;
-    margin: 0 auto;
+    margin: 0 48px;
   }
 }
 
@@ -17,12 +18,21 @@
     margin: 0 auto;
   }
 }
-
+@media screen and (min-width: 769px) and (max-width: 960px) {
+  .header {
+    margin: 0 30px;
+  }  
+}
 @media screen and (max-width: 768px) {
   .header {
     max-width: 720px;
     margin: 0 auto;
   }
+}
+@media screen and (min-width: 321px) and (max-width: 740px) {
+  .header {
+    margin: 0 20px;
+  }  
 }
 @media screen and (max-width: 320px) {
   .header {
