--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,23 +3,38 @@
   margin-top: 92px;
   max-width: 984px;
 }
-@media screen and (max-width: 1280px) {
-  .intro {
-    max-width: 984px;
-  }
-}
 
 @media screen and (max-width: 1024px) {
   .intro {
     max-width: 928px;
   }
 }
+@media screen and (min-width: 961px) and (max-width: 1023px) {
+  .intro {
+    max-width: 824px;
+    margin: 92px auto 0;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 960px) {
+  .intro {
+    max-width: 720px;
+    margin: 92px auto 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .intro {
     margin-top: 88px;
     max-width: 720px;
   }
 }
+@media screen and (min-width: 321px) and (max-width: 760px) {
+  .intro {
+    max-width: 720px;
+    margin: 88px 24px 0;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .intro {
     max-width: 288px;
