--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,21 +6,42 @@
   gap: 80px;
   max-width: 984px;
 }
-@media screen and (max-width: 1275px) {
-  .places {
-    max-width: 984px;
-  }
-}
 
 @media screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 990px) {
+  .places {
+    max-width: 928px;
+    margin: 92px 30px 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .places {
     margin-top: 88px;
     max-width: 720px;
+  }
+}
+@media screen and (min-width: 521px) and (max-width: 769px) {
+  .places {
+    max-width: 420px;
+    margin: 72px 110px 0; 
+  }
+}
+
+@media screen and (min-width: 451px) and (max-width: 520px) {
+  .places {
+    max-width: 420px;
+    margin: 72px 70px 0; 
+  }
+}
+@media screen and (min-width: 321px) and (max-width: 450px) {
+  .places {
+    max-width: 420px;
+    margin: 72px 24px 0; 
   }
 }
 @media screen and (max-width: 320px) {
