--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,16 +7,25 @@
     text-transform: uppercase;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
+@media screen and (min-width: 769px) and (max-width: 960px) {
+  .lead__caption {
+    margin-left: 30px;
+  }  
+}
 @media screen and (max-width: 768px) {
-    .lead__caption {
-      max-width: 720px;
-      margin: 0 auto;
-    }
+  .lead__caption {
+    max-width: 720px;
+    margin: 0 auto;
   }
-  
-  @media screen and (max-width: 320px) {
-    .lead__caption {
-      max-width: 288px;
-      margin: 0 auto;
-    }
+}
+@media screen and (min-width: 321px) and (max-width: 750px) {
+  .lead__caption {
+    margin-left: 20px;
+  }  
+}
+@media screen and (max-width: 320px) {
+  .lead__caption {
+    max-width: 288px;
+    margin: 0 auto;
   }
+}
